# cgrad

./: CMakeLists.txt  README.md
include/cgrad/: matrix.h
src/: matrix.c
tests/: CMakeLists.txt  test.c
